Fix fulcrum logo visibility for light theme. Quickfix for Lend page tile loader background color

--- a/packages/fulcrum/src/styles/components/lend-token-selector.scss
+++ b/packages/fulcrum/src/styles/components/lend-token-selector.scss
@@ -23,7 +23,7 @@
     border: 2px solid transparent;
 
     &.loading-transaction {
-      background-color: #1f262e;
+      background-color: var(--secondary-row);
       .lend-transaction-step {
         margin-top: 45px;
         display: flex;
